# atb_llm_study

./: .clang-format  .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  __init__.py  data_utils.py  engine.py  engine_utils.py  package-lock.json  package.json  preprocess.py  text_mlp.py  text_model.py  utils.py  vision_attention.py  vision_block.py  vision_model.py  vision_patch_embed.py
atb_cpp_llm/: .gitignore  CMakeLists.txt  build_and_test.sh
atb_cpp_llm/docs/: NPU_PIPELINE_OPTIMIZATION.md  PY_CPP_COMPARISON_TODO.md  README.md  REFACTOR_PLAN.md  STATUS.md  TEST_HARDENING_TODO.md  TEST_STRATEGY_GUIDE.md  WORKFLOW.md  architect-assessment-2026-06-16.md  audit-fix-plan.md  cpp11-compat-todo.md  deployment-checklist.md  design.md  dev-dispatch-log.md  lessons-learned.md  optimization-roadmap.md  platform-310p.md  refactoring-plan.md  test-fix-plan.md  testing-guide.md
atb_cpp_llm/docs/archive/: P5-execution-log.md  benchmark-report.md  test-coverage-log.md  test-hardening-log.md  testing-guide.md
atb_cpp_llm/docs/evergreen/: design.md  optimization-roadmap.md  platform-310p.md  testing-architecture.md  testing-guide-dev.md
atb_cpp_llm/include/atb_llm/: build_result.h  embedder.h  engine.h  kv_cache.h  layer_desc.h  model.h  operation_handle.h  timing.h  types.h
atb_cpp_llm/scripts/: gen_compare_tokens.py  verify_baseline.sh
atb_cpp_llm/src/core/: buffer_pool.h  context_manager.cpp  context_manager.h  debug_dump.cpp  debug_dump.h  graph_builder.cpp  graph_builder.h  kv_cache_manager.h  npu_tensor.cpp  npu_tensor.h  raii.h  tensor_allocator.cpp  tensor_allocator.h
atb_cpp_llm/src/engine/: embedder.cpp  llm_engine.cpp  llm_engine.h  model_registry.cpp  model_registry.h  runtime_impl.cpp  runtime_impl.h
atb_cpp_llm/src/families/: base_model.cpp  base_model.h
atb_cpp_llm/src/io/: json_config.cpp  safetensors_reader.cpp  safetensors_reader.h  weight_helpers.cpp  weight_helpers.h  weight_loader.cpp  weight_loader.h
atb_cpp_llm/src/log/: logger.h
atb_cpp_llm/src/ops/: concat_op.cpp  elewise_op.cpp  elewise_op.h  gather_op.h  index_add_op.cpp  index_add_op.h  layer_norm_op.h  rms_norm_op.cpp  rope_op.h  self_attention_op.cpp  self_attention_op.h  set_value_op.cpp  set_value_op.h  softmax_op.cpp  split_op.h  transpose_op.h
atb_cpp_llm/src/runners/: text_runner.cpp  text_runner.h  vision_runner.cpp  vision_runner.h
atb_cpp_llm/src/util/: cpp11_compat.h
atb_cpp_llm/src/utils/: cpp11_compat.h  dotenv.h  float_utils.h
atb_cpp_llm/tests/: README.md  _tests_env.py  benchmark.cpp  compare_py_cpp.py  diag_pipeline.py  gen_pos_embed_npu_reference.py  gen_vis_rope_npu_reference.py  test_accuracy.cpp  test_benchmark_modes.cpp  test_consistency.cpp  test_env.h  test_index_add_npu.cpp  test_io_adapters.cpp  test_mask_helper.h  test_stage_precision.cpp  test_text_model.cpp
atb_cpp_llm/tests/diagnostics/: compare_bench.py  compare_multimodal.py  compare_stages.py  compare_with_torch.py  diag_pipeline.py  diag_python_vision.py  diag_vision_stages.py
atb_cpp_llm/tests/level0_framework/: test_config_wiring.cpp  test_config_wiring.py  test_core.cpp  test_io_adapters.cpp  test_model_registry.cpp  test_weight_precision.cpp  test_weight_precision.py
atb_cpp_llm/tests/level1_cpu_pure/: test_base_model_utils.cpp  test_bin_format.cpp  test_bin_format.py  test_causal_mask_fp16.cpp  test_embedder_invariants.cpp  test_embedder_utils.cpp  test_float_utils.cpp  test_mrope_cpu.cpp  test_pos_embed_cpu.cpp  test_preprocess_cpu.cpp  test_vision_rope_cpu.cpp
atb_cpp_llm/tests/level2_op_precision/: test_aa_smallop_spike.cpp  test_aclnn_bicubic_spike.cpp  test_activation_precision.cpp  test_elewise_precision.cpp  test_gather_reduce_precision.cpp  test_index_add_npu.cpp  test_layer_norm_precision.cpp  test_linear_precision.cpp  test_patch_embed_precision.cpp  test_patch_transpose_spike.cpp  test_pos_embed_npu_graph.cpp  test_rms_norm_precision.cpp  test_rope_precision.cpp  test_self_attention_precision.cpp  test_softmax_precision.cpp  test_split_concat_precision.cpp  test_swiglu_mlp_precision.cpp  test_text_decoder_layer_precision.cpp  test_text_ops.cpp  test_transpose_set_value_precision.cpp  test_vis_rope_npu_graph.cpp  test_vision_attention_precision.cpp  test_vision_block_precision.cpp  test_vision_merger_precision.cpp  test_vision_mlp_precision.cpp  test_vision_ops.cpp
atb_cpp_llm/tests/level3_integration/: test_deepstack.cpp  test_deepstack_npu_tensor.cpp  test_text_model.cpp  test_text_runner_full.cpp  test_vision_runner_full.cpp  test_vision_stages.cpp
atb_cpp_llm/tests/level4_e2e/: test_accuracy.cpp  test_accuracy.py  test_consistency.cpp  test_consistency.py  test_e2e.cpp  test_engine_vs_official.cpp  test_forward_error_paths.cpp  test_path_c_raw_image.cpp  test_stage_precision.cpp  test_sync_safety.cpp  test_sync_safety.py
atb_cpp_llm/tests/python_reference/: gen_all.py  gen_cpu_reference.py  gen_official_embedding.py  gen_official_pixel_values.py  gen_pos_embed_npu_reference.py  gen_python_reference.py  gen_stage_reference.py  gen_vis_rope_npu_reference.py  refdata_fallback.py  test_first_layer_ref.py  test_stage_reference.py  test_vision_block_ref.py
atb_cpp_qwen3vl_embedding/: CMakeLists.txt  REFACTOR_PLAN.md  build_and_test.sh
atb_cpp_qwen3vl_embedding/.github/workflows/: ci.yml
atb_cpp_qwen3vl_embedding/include/atb_llm/: engine.h  layer_desc.h  model.h  runtime.h  types.h
atb_cpp_qwen3vl_embedding/src/core/: buffer_pool.cpp  context_manager.cpp  context_manager.h  graph_builder.cpp  graph_builder.h  npu_tensor.h  raii.h  tensor_allocator.cpp  tensor_allocator.h
atb_cpp_qwen3vl_embedding/src/engine/: llm_engine.cpp  llm_engine.h  model_registry.cpp  runtime_impl.h  (+2 more)
atb_cpp_qwen3vl_embedding/tests/: bench_mm.cpp  benchmark.cpp  compare_bench.py  compare_multimodal.py  compare_with_torch.py  test_accuracy.cpp  test_accuracy.py  test_consistency.cpp  test_consistency.py  test_core.cpp  test_e2e.cpp  test_forward_error_paths.cpp  test_text_model.cpp  test_text_ops.cpp  test_vision_ops.cpp
atb_cpp_qwen3vl_embedding/utils/: plog_simple.h  safetensors.hh
(+180 files in other folders)
